# trackmyhandi

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
accounts/: admin.py  models.py  serializers.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
rounds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rounds/migrations/: 0001_initial.py
trackmyhandi-app/: index.html  package-lock.json  package.json  railway.json
trackmyhandi-app/src/: App.css  App.tsx  index.css
trackmyhandi-app/src/api/: auth.ts  client.ts  rounds.ts
trackmyhandi-app/src/components/: RoundCard.tsx  RoundForm.tsx
trackmyhandi-app/src/context/: AuthContext.tsx
trackmyhandi-app/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx
trackmyhandi-app/src/types/: index.ts
trackmyhandi-app/src/utils/: handicap.test.ts  handicap.ts
